--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -40,3 +40,16 @@ Freshmail,Freshmail
 Yes,Tak
 No,Nie
 "Save Config","Zapisz Konfigurację"
+"First Email","Pierwszy Email"
+"Second Email","Drugi Email"
+"Third Email","Trzeci Email"
+"Send After","Wyslij po"
+"Day","Dniu"
+"Days","Dniach"
+"Please Select","Proszę Wybrać"
+"Synchronize templates with FreshMail","Synchronizuj szablony z FreshMail"
+"Synchronize job added to queue. The templates will be synchronized within 2 minutes.","Synchronizacja dodana do kolejki. Szablony będą zsynchronizowane w przeciągu 2 minut."
+"Edit template in FreshMail","Edytuj szablon w FreshMail"
+"Field template id should not be empty.","pole template id nie może być puste."
+"There is no such template in the database.","Nie ma takiego szablonu w bazie danych."
+"Template will open in FreshMail editor. After making changes and saving template in FreshMail, go to Magento and click on 'Synchronize templates' to see the changes.","Szablon otworzy się w edytorze FreshMail. Po dokonaniu zmian i zapisaniu szablonu we FreshMailu przejdź do Magento i kliknij przycisk 'Synchronizuj szablony' aby zobaczyć dokonane zmiany."
